src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Newly_Added__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for check for campaign members from IB that were not invited during the segmentation. This is for target vs actual reporting to filter out newly added campaign members from actual responses.</description>
        <label>Newly Added</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Package_Name__c</fullName>
        <formula>Participating_Dealer_Package__r.Campaign_Package__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Package Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participating_Dealer_Name__c</fullName>
        <formula>Participating_Dealer_Package__r.Dealer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Participating Dealer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participating_Dealer_Package__c</fullName>
        <label>Participating Dealer/Package</label>
        <referenceTo>Participating_Dealer__c</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Registration_Notes__c</fullName>
        <label>Registration Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Source_Campaign_Partner__c</fullName>
        <label>Source Campaign Partner</label>
        <referenceTo>Campaign_Partner__c</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Task Generated</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>